--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -1,1 +1,19 @@
-<p>post-page works!</p>
+<div class="post">
+    <div class="header">
+        <h1>Post Title</h1>
+        <button routerLink="/" class="btn btn-link">На главную</button>
+    </div>
+
+    <div class="info">
+        <strong>Author</strong>
+        <small>16.03.2020</small>
+    </div>
+    <div>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, cupiditate deleniti ducimus facilis laboriosam ratione suscipit voluptatibus. Ad adipisci autem, cumque cupiditate dignissimos ducimus enim est incidunt, magnam nostrum quasi quibusdam quis quod reiciendis sit tempore, temporibus. Accusantium, autem corporis dolores, et fuga harum id iste nemo odio repellendus sint!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, cupiditate deleniti ducimus facilis laboriosam ratione suscipit voluptatibus. Ad adipisci autem, cumque cupiditate dignissimos ducimus enim est incidunt, magnam nostrum quasi quibusdam quis quod reiciendis sit tempore, temporibus. Accusantium, autem corporis dolores, et fuga harum id iste nemo odio repellendus sint!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, cupiditate deleniti ducimus facilis laboriosam ratione suscipit voluptatibus. Ad adipisci autem, cumque cupiditate dignissimos ducimus enim est incidunt, magnam nostrum quasi quibusdam quis quod reiciendis sit tempore, temporibus. Accusantium, autem corporis dolores, et fuga harum id iste nemo odio repellendus sint!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, cupiditate deleniti ducimus facilis laboriosam ratione suscipit voluptatibus. Ad adipisci autem, cumque cupiditate dignissimos ducimus enim est incidunt, magnam nostrum quasi quibusdam quis quod reiciendis sit tempore, temporibus. Accusantium, autem corporis dolores, et fuga harum id iste nemo odio repellendus sint!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, cupiditate deleniti ducimus facilis laboriosam ratione suscipit voluptatibus. Ad adipisci autem, cumque cupiditate dignissimos ducimus enim est incidunt, magnam nostrum quasi quibusdam quis quod reiciendis sit tempore, temporibus. Accusantium, autem corporis dolores, et fuga harum id iste nemo odio repellendus sint!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, cupiditate deleniti ducimus facilis laboriosam ratione suscipit voluptatibus. Ad adipisci autem, cumque cupiditate dignissimos ducimus enim est incidunt, magnam nostrum quasi quibusdam quis quod reiciendis sit tempore, temporibus. Accusantium, autem corporis dolores, et fuga harum id iste nemo odio repellendus sint!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, cupiditate deleniti ducimus facilis laboriosam ratione suscipit voluptatibus. Ad adipisci autem, cumque cupiditate dignissimos ducimus enim est incidunt, magnam nostrum quasi quibusdam quis quod reiciendis sit tempore, temporibus. Accusantium, autem corporis dolores, et fuga harum id iste nemo odio repellendus sint!
+    </div>
+</div>
