--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,1 +1,40 @@
-<p>login-page works!</p>
+<form class="card" [formGroup]="form" (ngSubmit)="submit()">
+    <h2>Войти в панель администратора</h2>
+    
+    <div
+            class="form-control"
+            [ngClass]="{invalid: form.get('email').touched && form.get('email').invalid}"
+    >
+        <label for="email">Email:</label>
+        <input type="email" id="email" />
+        <div
+            class="validation"
+            *ngIf="form.get('email').touched && form.get('email').invalid"
+        >
+            <small *ngIf="form.get('email').errors.required">
+                Обязательное поле
+            </small>
+            <small *ngIf="form.get('email').errors.email">
+                Невалидный Email
+            </small>
+        </div>
+    </div>
+    <div
+            [ngClass]="{invalid: form.get('password').touched && form.get('password').invalid}"
+            class="form-control"
+    >
+        <label for="password">Пароль:</label>
+        <input type="password" id="password" />
+        <div
+                *ngIf="form.get('password').touched && form.get('password').invalid"
+                class="validation"
+        >
+            <small>dsfsdf</small>
+        </div>
+    </div>
+    <button
+            type="submit"
+            class="btn btn-primary"
+            [disabled]="form.invalid"
+    >Войти</button>
+</form>
