--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -7,6 +7,12 @@
     >
         {{ error }}
     </div>
+    <div
+            class="alert alert-dark"
+            *ngIf="message"
+    >
+        {{ message }}
+    </div>
 
     <div
             class="form-control"
