--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -1,19 +1,20 @@
-<div class="post">
-    <div class="header">
-        <h1>Post Title</h1>
-        <button routerLink="/" class="btn btn-link">На главную</button>
-    </div>
+<div *ngIf="post$ | async as post; else loading">
+    <div class="post">
+        <div class="header">
+            <h1>{{ post.title }}</h1>
+            <button routerLink="/" class="btn btn-link">На главную</button>
+        </div>
 
-    <div class="info">
-        <strong>Author</strong>
-        <small>16.03.2020</small>
-    </div>
-    <div>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, cupiditate deleniti ducimus facilis laboriosam ratione suscipit voluptatibus. Ad adipisci autem, cumque cupiditate dignissimos ducimus enim est incidunt, magnam nostrum quasi quibusdam quis quod reiciendis sit tempore, temporibus. Accusantium, autem corporis dolores, et fuga harum id iste nemo odio repellendus sint!
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, cupiditate deleniti ducimus facilis laboriosam ratione suscipit voluptatibus. Ad adipisci autem, cumque cupiditate dignissimos ducimus enim est incidunt, magnam nostrum quasi quibusdam quis quod reiciendis sit tempore, temporibus. Accusantium, autem corporis dolores, et fuga harum id iste nemo odio repellendus sint!
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, cupiditate deleniti ducimus facilis laboriosam ratione suscipit voluptatibus. Ad adipisci autem, cumque cupiditate dignissimos ducimus enim est incidunt, magnam nostrum quasi quibusdam quis quod reiciendis sit tempore, temporibus. Accusantium, autem corporis dolores, et fuga harum id iste nemo odio repellendus sint!
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, cupiditate deleniti ducimus facilis laboriosam ratione suscipit voluptatibus. Ad adipisci autem, cumque cupiditate dignissimos ducimus enim est incidunt, magnam nostrum quasi quibusdam quis quod reiciendis sit tempore, temporibus. Accusantium, autem corporis dolores, et fuga harum id iste nemo odio repellendus sint!
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, cupiditate deleniti ducimus facilis laboriosam ratione suscipit voluptatibus. Ad adipisci autem, cumque cupiditate dignissimos ducimus enim est incidunt, magnam nostrum quasi quibusdam quis quod reiciendis sit tempore, temporibus. Accusantium, autem corporis dolores, et fuga harum id iste nemo odio repellendus sint!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, cupiditate deleniti ducimus facilis laboriosam ratione suscipit voluptatibus. Ad adipisci autem, cumque cupiditate dignissimos ducimus enim est incidunt, magnam nostrum quasi quibusdam quis quod reiciendis sit tempore, temporibus. Accusantium, autem corporis dolores, et fuga harum id iste nemo odio repellendus sint!
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, cupiditate deleniti ducimus facilis laboriosam ratione suscipit voluptatibus. Ad adipisci autem, cumque cupiditate dignissimos ducimus enim est incidunt, magnam nostrum quasi quibusdam quis quod reiciendis sit tempore, temporibus. Accusantium, autem corporis dolores, et fuga harum id iste nemo odio repellendus sint!
+        <div class="info">
+            <strong>{{ post.author }}</strong>
+            <small>{{ post.date | date:'medium':null:'ru' }}</small>
+        </div>
+        <div>
+            <quill-view-html [content]="post.text"></quill-view-html>
+        </div>
     </div>
 </div>
+
+<ng-template #loading>
+    <p class="text-center">Загружаю пост ...</p>
+</ng-template>
