--- a/src/app/shared/components/main-layout/main-layout.component.html
+++ b/src/app/shared/components/main-layout/main-layout.component.html
@@ -1,4 +1,7 @@
-<nav class="navbar main">
+<nav class="navbar main bg-danger">
+  <div class="mr-1">
+    <img src="https://img.icons8.com/doodle/38/000000/blogger--v1.png"/>
+  </div>
   <h1>Angular Blog</h1>
 </nav>
 
